@@ -1,4 +1,5 @@
 1.2.2:
+- cleaned up configure process (2020/12/28 MS)
 - improved wall kicks (2020/12/25 MS)
 - added lock delay (2020/12/25 MS)
 - allow more keys for controls (2020/12/25 MS)
